--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="generalPadding">10dp</dimen>
     <dimen name="buttonMargin">10dp</dimen>
+    <dimen name="elevation">12dp</dimen>
 </resources>
