--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -31,7 +31,9 @@
                 android:layout_gravity="center_horizontal"
                 android:padding="@dimen/generalPadding"
                 android:text="TextView"
-                android:textColor="@color/white" />
+                android:textColor="#EEEEEE"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rowOccupationTextView"
@@ -40,7 +42,8 @@
                 android:layout_gravity="center_horizontal"
                 android:padding="@dimen/generalPadding"
                 android:text="TextView"
-                android:textColor="@color/white" />
+                android:textColor="#212121"
+                android:textSize="18dp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
