--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -43,7 +43,7 @@
                 android:padding="@dimen/generalPadding"
                 android:text="TextView"
                 android:textColor="#212121"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
